apps/mediacenter/plex/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: plex-hl
spec:
  selector:
    app: plex
  ports:
    - port: 32400
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  serviceName: plex-hl
  selector:
    matchLabels:
      app: plex
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /series
          name: series
        - mountPath: /movies
          name: movies
      volumes:
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: series
        persistentVolumeClaim:
          claimName: series
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - name: http
      port: 32400
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: nginx
  rules:
  - host: plex.home
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: plex
            port:
              number: 32400
